# FCR_1

./: .gitattributes  .gitignore  LICENSE.md  ReadMe.md  pyproject.toml
fcr_case_study/data/anonymized_data/: KoPf_FCR_dataset.csv
fcr_case_study/notebooks/: runs_eval.ipynb
fcr_case_study/notebooks/runs/: runs.csv
fcr_case_study/src/: autoML_model.py  config.py  datasets.py  dummy_model.py  metrics.py  model_funcs.py  param.py  standard_models.py  utils.py
