[tool.poetry]
name = "fcr_case_study"
version = "0.1.0"
description = ""
authors = ["Korbinian Pfab <korbinian.pfab@siemens.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
plotly = "^5.11.0"
ipywidgets = "8.0.2" #causing trouble
jupyter = "^1.0.0"
ipykernel = "^6.17.0"
black = "^22.10.0"
seaborn = "^0.12.1"
pyarrow = "^10.0.1"
kaleido = "0.0.3"
bayesian-optimization = "^1.4.2"
xgboost = "^1.7.4"
mlflow = "^2.4.1"
imbalanced-learn = "^0.10.1"
# auto-sklearn = "^0.15.0" # auto-sklearn and imbalanced_learn are incompatible. For standard models latter is required. For autoML models former.

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
